fix: use darker gray for better contrast

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -68,7 +68,7 @@
 }
 
 .card div {
-  @apply mt-4 text-lg text-gray-600;
+  @apply mt-4 text-lg text-gray-700;
 }
 
 .card-container {
@@ -128,7 +128,7 @@
 }
 
 .section-blurb {
-  @apply font-light pb-4 text-gray-600 text-lg;
+  @apply font-light pb-4 text-gray-700 text-lg;
 }
 
 .section-classes {
